--- a/branches/leo-ctx5/docs/pdds/pdd03_calling_conventions.pod
+++ b/branches/leo-ctx5/docs/pdds/pdd03_calling_conventions.pod
@@ -119,12 +119,21 @@ C<set_args> and C<set_returns>:
                slurpy flag on the corresponding parameter, then
                the content of this aggregate is flattened.
 
+    0b100000  OPTIONAL
+                Optional arguments are not considered in an
+		argument count mismatch.
+
+    0b1000000 OPT_COUNT
+                A INT argument with this bit set receives the count
+		of optional arguments found so far. The optional
+		argument count is reset then, so that another argument
+		with OPT_COUNT can be used to check for more optional
+		arguments.
+
+
     0b000000000
             INVOCANT
             INVOCANT2
-
-    0b000000000
-            OPTIONAL
 
     0b000000000
             NAMED
