--- a/branches/leo-ctx5/languages/tcl/TODO
+++ b/branches/leo-ctx5/languages/tcl/TODO
@@ -14,6 +14,11 @@ tests by then. =-)
 
 =over 4
 
+=item pbc_merge
+
+Take advantage of the new C<pbc_merge> to combine the various .pbc files
+into a singleton.
+
 =item Makefile deps
 
 Should be more explicit about the PMC dependencies in the makefile. *something*
