Allow [expr]'s && and || operators to defer evaluation. Add a macro to help keep the code clean while doing this.
un-TODO all currently written [expr] tests.

--- a/branches/leo-ctx5/languages/tcl/docs/hacks.pod
+++ b/branches/leo-ctx5/languages/tcl/docs/hacks.pod
@@ -18,9 +18,9 @@ hard.
 =back 
 
 It is, of course, quite likely that said feature already exists with
-a nice interface, and
-was just not found by the partcl developers - If you find something
-along these lines, let them know.
+a nice interface, and was just not found by the partcl developers - 
+If you find something along these lines, let them know on the internals
+list.
 
 =head1 WORKAROUNDS
 
