--- a/languages/tcl/README
+++ b/languages/tcl/README
@@ -31,12 +31,11 @@ cd'ing to the proper directory to run.
 To run the test suite, type C<make test>. Note - if I<any> tests fail, try
 setting the environment variable C<TEST_PROG_ARGS> to C<-G> and retry.
 
-If the tests now pass, there's a GC bug that needs to be reported to
-the perl6-internals list.
+If any tests fail (with C<-G> or not), please email the perl6-internals list.
 
 =head2 Documentation
 
-Various documentation (in various states of decay at the moment):
+See:
 
  docs/*
  TODO
